--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ Grey #777
     font-size: 16px;
     line-height: 1.7;
     color: #777;
-    background-color: #000000;
+    background-color: #ffffff;
     /* padding: 30px; */
     display: flex;
     flex-direction: column;
@@ -199,20 +199,21 @@ btn:active{
 }
 .col-1-of-2{
   width: 50%;
-  background-color: rgb(189, 183, 183);
+  background-color: #ffffff;
   margin-bottom: 20px;
-  gap: 20px;
   float: right;
   padding-bottom: 10px;
+  padding: 10px;
 
 }
 .section-despre{
   margin-top:54%;
-  background-color: #d8d5d5;
+  background-color: #ffffff;
   padding:5rem 0rem  15rem 0rem ;
 }
 .centrare-text{
-  text-align: center;
+  text-align: left;
+  margin-left: 30px;
 }
 
 .antrenamente{
@@ -243,10 +244,10 @@ btn:active{
   
 }
 .paragraf{
-  font-size: 14px;
-  &:not(:last-child){
-    margin-bottom: 30px;
-    margin-left: 10px;
+    font-size: 14px;
+    &:not(:last-child){
+      margin-bottom: 30px;
+      margin-left: 10px;
   }
 }
 .btn-text{
@@ -260,7 +261,7 @@ btn:active{
 
 }
 .btn-text:hover{
-  background-color: white;
+  background-color: rgb(139, 135, 135);
   color: #444;
   box-shadow: 0 1rem 2 rem black .15;
   transform: translateY(-2px);
