--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ btn:active{
 }
 .row{
   max-width: 100%;
-  background-color: #777;
+  background-color: #ffffff;
   margin: 0 auto; /*centram elementul in mijloc*/
   color: #000000;
   margin-bottom: 80px;
@@ -310,6 +310,37 @@ btn:active{
     z-index: 20;
 
   }
+  .section-antrenamente{
+    padding: 10rem 20rem 20rem 20rem;
+    background-image: url(../img/9M7A6646.jpg );
+    height: 50rem;
+    /* opacity: .6; */
+    margin-top: 25rem;
+    background-size: cover;
+    
+  }
+ 
+  .ant-box{
+    background-color: #ffffff ;
+    font-size: 1.5 rem;
+    padding: 2.5rem;
+    text-align: center;
+    border-radius: 3px;
+    position: relative;
+    float: left;
+    margin: 30px;
+    width: 20rem;
+    height: 30rem;
+   
+    box-shadow: 0 1.5rem 4rem black;
+  }
+  .row-ant{
+    opacity: .9;
+  }
+    
+  
+
+
 
 
 
