--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ btn:active{
   }
 
   .section-echipa{
+    position: relative;
     margin-top: 2%;
     padding-top: 10px;
     margin-left: 20px;
@@ -346,7 +347,7 @@ btn:active{
   }
 
   .row-echipa{
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     width: 70%;
     height: 15rem;
     display: block;
@@ -383,6 +384,16 @@ btn:active{
   .antrenor1{
     width: 100%;
   }
+  /*
+  .bg-video2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+
+  } */
     
   
 
