--- a/css/style.css
+++ b/css/style.css
@@ -724,3 +724,85 @@ label {
 label:hover {
   box-shadow: rgba(6, 57, 224, 0.836) 0px 5px 15px, inset rgba(185, 183, 183, 0.849) 0px -10px 20px;
 }
+
+/*Laurentiu Gallery part*/
+
+.section-gallery {
+  margin-top: 2%;
+  padding-top: 10px;
+  margin-left: 20px;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 6px;
+}
+/* 4 coloane una langa alta */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 5px;
+}
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive - facem 2 coloane din 4 */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  } 
+  .section-gallery {
+    margin-top: 6%;
+    padding-top: 20px;
+    margin-left: 20px;
+  }
+  /* Responsive- modificam si h2 */
+  .section-gallery h2 {
+    font-size: 45px;
+  }
+  .section-echipa {
+    margin-top: 10%;
+    padding-top: 10px;
+   }
+  
+  .row-echipa {
+    width: 90%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+  }
+}
+/* Responsive- coloanele merg una peste alta in loc de una langa alta */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+  .section-gallery {
+    margin-top: 15%;
+    padding-top: 30px;
+    margin-left: 20px;
+  }
+  /* Responsive- modificam si h2 */
+  .section-gallery h2 {
+    font-size: 40px;
+  }
+
+  .section-echipa {
+    margin-top: 20%;
+    padding-top: 20px;
+  }
+  
+  .row-echipa {
+    width: 80%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+  }
+}
