--- a/css/style.css
+++ b/css/style.css
@@ -780,7 +780,7 @@ label[for="hamburger"] {
     flex-direction: column;
     top: 90px;
     width: 100%;
-    height: calc(45vh - 40px);
+    height: 45vh;
     transition: 0.5s;
     box-shadow: rgba(6, 57, 224, 0.836) 0px 5px 15px, inset rgba(185, 183, 183, 0.849) 0px -10px 20px;
     opacity: 90%;
