--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,6 @@ btn:active {
 
 .logobox {
   text-align: center;
-
 }
 
 .logo {
@@ -630,6 +629,28 @@ btn:active {
 .footer-item {
   display: inline-block;
   margin-right: 1rem;
+}
+
+/*Laurentiu add social */
+.social-item {
+  display: flex;
+  font-size: 22px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.social-item a:hover {
+  color: #ff0000;
+  transform: rotate(15deg) scale(1.6);
+}
+
+.logobox img {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .footer-nav {
