--- a/css/style.css
+++ b/css/style.css
@@ -391,13 +391,8 @@ btn:active {
   color: black;
   font-size: 1.5 rem;
   padding: 2.5rem;
-  text-align: center;
   border-radius: 25px;
   position: relative;
-  margin: 30px;
-  margin-top: 1px;
-  width: 1200px;
-  height: auto;
   z-index: 1;
   border: 2px solid black;
   box-shadow: rgba(6, 57, 224, 0.836) 0px 5px 15px, inset rgba(185, 183, 183, 0.849) 0px -10px 20px;
@@ -412,10 +407,6 @@ btn:active {
   text-align: center;
   border-radius: 25px;
   position: relative;
-  margin: -330px;
-  margin-top: 1px;
-  width: 1200px;
-  height: auto;
   z-index: 1;
   border: 2px solid black;
   box-shadow: rgba(6, 57, 224, 0.836) 0px 5px 15px, inset rgba(185, 183, 183, 0.849) 0px -10px 20px;
@@ -430,10 +421,6 @@ btn:active {
   text-align: center;
   border-radius: 25px;
   position: relative;
-  margin: -750px;
-  margin-top: 1px;
-  width: 1200px;
-  height: auto;
   z-index: 1;
   border: 2px solid black;
   box-shadow: rgba(6, 57, 224, 0.836) 0px 5px 15px, inset rgba(185, 183, 183, 0.849) 0px -10px 20px;
@@ -441,11 +428,11 @@ btn:active {
 
 .row-ant {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   opacity: .9;
 }
+
 
 .section-echipa {
   margin-top: 3%;
@@ -616,7 +603,6 @@ btn:active {
 .footer {
   margin-top: 4rem;
   margin-bottom: 10px;
-
   background-color: #333;
   padding: 5rem 5rem 5rem 5rem;
   font-size: 1rem;
@@ -871,6 +857,9 @@ label[for="hamburger"] {
   .contact-section {
     margin-left: 0%;
     margin-right: 0%;
+  }
+  .row-ant {
+    display: block;
   }
 }
 
